# M2ID3D_SI3D_TPs

./: .gitignore  CMakeLists.txt  Makefile  README.md  SI3D_TP.cbp  generateAllDocImages.sh  render.hdr
CMake/: cmakeConfiguration.cmake
data/RayTracingData/: bezier.grille  cornellBetterOrbiter.txt  cornell_orbiter2.txt  emissionOrbiter.txt  geometryOrbiter.txt  materials.mtl  raytrace.glsl  secondaryOrbiter.txt  shadowOrbiter.txt
data/Result/: Render.hdr  RenderExercice5.hdr  TempRender.hdr
doc/readme/: Ambiant_Cornell_distrib.hdr  Ambiant_Cornell_uniform.hdr  Ambiant_Emission_distrib.hdr  Ambiant_Emission_uniform.hdr  Ambiant_Geometry_distrib.hdr  Ambiant_Geometry_uniform.hdr  Ambiant_Secondary_distrib.hdr  Ambiant_Secondary_uniform.hdr  Ambiant_Shadow_distrib.hdr  Ambiant_Shadow_uniform.hdr  Ex2_Cornell.hdr  Ex2_Emission.hdr  Ex2_Geometry.hdr  Ex2_Secondary.hdr  Ex2_Shadow.hdr  Ex5_Cornell.hdr  Ex5_Cornell_1Ray.hdr  Ex5_Cornell_1Ray_squareRoot.hdr  Ex5_Cornell_Epsilon00001.hdr  Ex5_Cornell_cosPdf.hdr  Ex5_Cornell_mis.hdr  Ex5_Cornell_tonemapped.hdr  Ex5_Emission.hdr  Ex5_Emission_1Ray.hdr  Ex5_Emission_1Ray_squareRoot.hdr  Ex5_Emission_Epsilon00001.hdr  Ex5_Emission_cosPdf.hdr  Ex5_Emission_mis.hdr  Ex5_Emission_tonemapped.hdr  Ex5_Geometry.hdr  Ex5_Geometry_1Ray.hdr  Ex5_Geometry_1Ray_squareRoot.hdr  Ex5_Geometry_Epsilon00001.hdr  Ex5_Geometry_cosPdf.hdr  Ex5_Geometry_mis.hdr  Ex5_Geometry_tonemapped.hdr  Ex5_Secondary.hdr  Ex5_Secondary.taf  Ex5_Secondary_1Ray.hdr  Ex5_Secondary_1Ray.taf  (+41 more)
src/: TestOpenGL.cpp  heigthMapViewer.cpp
src/RayTrace/: RayTraceImageProcessing.h  mainCPU.cpp  mainGPU.cpp
src/RayTrace/CPU/: RayTraceImageProcessing.cpp  RayTraceImageProcessing.h  mainCPU.cpp
src/RayTrace/GPU/: ComputeShaderTest.cpp  RTgpuCompute.cpp  mainGPU.cpp  min.glsl
src/RayTrace/Utils/: OpenGLUtils.h  Utils.cpp  Utils.h  directions.cpp
src/RobotGL/: robotGL.cpp
src/SurfaceBezier/: Modelisation_TP3.cpp  o_surface_bezier.c  raytrace.cpp  structNE.h  surface_bezier.h
src/gKit/: window.cpp
src/shader/: robot.glsl
